<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" 

    android:background="@drawable/bg_main">

    <LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp">
        
        <ImageView
                android:id="@+id/imageView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/project_logo"
                android:contentDescription="@string/sometext" />

          
	    <EditText 
			android:id="@+id/person_name"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:background="@drawable/edittext_top_bg"
	        android:padding="10dp"
            android:hint="@string/name"
            android:inputType="textPersonName"
            android:textAppearance="?android:attr/textAppearanceSmall"
	        android:textColorHint="#bbbbbb"
	        />
        <EditText 
            android:id="@+id/person_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:background="@drawable/edittext_default_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
            android:hint="@string/phone"
		    android:inputType="phone"
            android:textColorHint="#bbbbbb"/>
        
        <EditText 
            android:id="@+id/person_email"
            android:layout_width="match_parent"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bottom_bg"
            android:layout_marginTop="-2dp"
            android:padding="10dp"
		    android:hint="@string/email"
		    android:inputType="textEmailAddress"
            android:textColorHint="#bbbbbb"/>
        
        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/rounded_button"
            android:onClick="signUpUser"
            android:textColor="@color/white"
            android:padding="10dp"
            android:text="@string/action_sign_in_register" />

        </LinearLayout>

</RelativeLayout>
